fix overflow on new profile page

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -16,6 +16,10 @@
   }
 }
 
+html, body {
+  overflow-x:hidden 
+} 
+
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-color));
